Box mapping is broken in Cycles #72474

Closed
opened 2019-12-16 09:15:58 +01:00 by Sebastian Koenig · 14 comments

System Information
Operating system: Linux-5.3.0-22-generic-x86_64-with-Ubuntu-19.10-eoan 64 Bits
Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.31

Blender Version
Broken: version: 2.82 (sub 5), branch: master, commit date: 2019-12-16 05:48, hash: f3dadd4115
Worked: 2.82, before UDIM was committed

Short description of error
Box mapping in Cycles is broken.

Exact steps for others to reproduce the error
Open this file and go to rendered viewport.
box_mapping.blend
It is rendering as pink here. All other mapping methods such as Flat, Tube and Sphere work fine.
In Eevee it works fine as well.

**System Information** Operating system: Linux-5.3.0-22-generic-x86_64-with-Ubuntu-19.10-eoan 64 Bits Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.31 **Blender Version** Broken: version: 2.82 (sub 5), branch: master, commit date: 2019-12-16 05:48, hash: `f3dadd4115` Worked: 2.82, before UDIM was committed **Short description of error** Box mapping in Cycles is broken. **Exact steps for others to reproduce the error** Open this file and go to rendered viewport. [box_mapping.blend](https://archive.blender.org/developer/F8225332/box_mapping.blend) It is rendering as pink here. All other mapping methods such as Flat, Tube and Sphere work fine. In Eevee it works fine as well.
Author
Member

Added subscriber: @sebastian_k

Added subscriber: @sebastian_k

#72431 was marked as duplicate of this issue

#72431 was marked as duplicate of this issue

#72482 was marked as duplicate of this issue

#72482 was marked as duplicate of this issue
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Can confirm, checking...

Can confirm, checking...
Member

Added subscriber: @LukasStockner

Added subscriber: @LukasStockner
Member

Caused by c30d6571bb

@LukasStockner : mind having a look?

Caused by c30d6571bb @LukasStockner : mind having a look?

Added subscriber: @juang3d

Added subscriber: @juang3d

It's the same behaviour I saw with the patch earlier, so may be the same problem that existed for the cycles preview window.
I can confirm this problem too since we use Box mapping extensively and we saw our scene going pink suddenly

It's the same behaviour I saw with the patch earlier, so may be the same problem that existed for the cycles preview window. I can confirm this problem too since we use Box mapping extensively and we saw our scene going pink suddenly

This issue was referenced by blender/cycles@dc644e3e92

This issue was referenced by blender/cycles@dc644e3e92669d55aaadfe95e2e21216ed1a659a

This issue was referenced by 8d16dc029e

This issue was referenced by 8d16dc029e6c52b16666b4edfafa66794d64b1a4
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Lukas Stockner self-assigned this 2019-12-16 12:58:45 +01:00

Added subscriber: @ME2

Added subscriber: @ME2
Member

Added subscribers: @CarlG, @ostapblender

Added subscribers: @CarlG, @ostapblender
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#72474
No description provided.